Fixed CodeBlock on Mobile Devices, Updated Background in About Us, Added Community Forum (#79)
* Fixed codeblock on documentation for mobile devices, fixed background in about us page, and added community forum to footer

* Mobile responsive on about us

* Removed background color, fixed codeblock on dark mode and fixed cookiepopup dialog on docs

* Fixed mobile responsive spacing

* Fixed two column issue at 767px

--- a/src/elements/content/Content.scss
+++ b/src/elements/content/Content.scss
@@ -428,6 +428,31 @@
       word-break: break-all;
     }
 
+    .hljs {
+      table th,
+      table td {
+        border: none !important;
+      }
+   
+      table {
+        width: 100% !important;
+
+        tr:first-child {
+          background-color: transparent !important;
+          
+          td {
+            background-color: transparent !important;
+            
+          }
+        }
+      }
+
+      td.hljs-ln-line.hljs-ln-numbers {
+        width: 20px;
+        border-right: 1px solid colors.$gray-800 !important;
+      }
+    }
+
     table {
       tr:first-child {
         background-color: colors.$white;
@@ -766,6 +791,13 @@
     table td {
       border: 1px solid colors.$gray-800 !important;
       word-break: break-word;
+    }
+
+    .hljs {
+      table th,
+      table td {
+        border: none !important;
+      }
     }
 
     table {
