--- a/src/views/about/Team.scss
+++ b/src/views/about/Team.scss
@@ -15,11 +15,9 @@
   flex-direction: column;
   gap: 64px;
 
-  background-color: colors.$white;
-
   @media screen and (max-width: 767px) {
     margin-top: 64px;
-    margin-bottom: 64px;
+    margin-bottom: 0;
     padding-bottom: 0;
   }
 
@@ -68,32 +66,22 @@
     .ui.team.member.list {
       display: inline-flex;
       flex-direction: row;
-      gap: 8px;
+      flex-wrap: wrap;
+
+      @media (max-width: 767px) {
+        gap: 32px;
+      }
     }  
   }
 
   .team.members.center {
     display: flex;
     flex-direction: column;
-  }
-  
-  .slider.container {
-    max-width: 100%;
-    width: auto;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    gap: 64px;
-    
-    .arrows {
-      justify-content: center;
-    }    
+    align-items: center;
   }
 }
 
 .dark .about.us.section .team.full.width.container {
-  background-color: colors.$black;
 
   > .content {
     
